Add packaging tag

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <name>JHAAPI</name>
     <description>Java Home Assistant API</description>
 
+    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
