--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <okhttp.version>4.12.0</okhttp.version>
         <jackson-databind.version>2.17.2</jackson-databind.version>
         <logback.version>1.5.6</logback.version>
+        <guava.version>33.2.1-jre</guava.version>
 
         <junit-jupiter.version>5.10.3</junit-jupiter.version>
         <junit-platform-launcher.version>1.10.3</junit-platform-launcher.version>
@@ -42,6 +43,11 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
