--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <okhttp.version>4.12.0</okhttp.version>
         <jackson.version>2.17.2</jackson.version>
         <logback.version>1.5.6</logback.version>
+        <httpcore5.version>5.2.5</httpcore5.version>
 
         <junit-jupiter.version>5.10.3</junit-jupiter.version>
         <junit-platform-launcher.version>1.10.3</junit-platform-launcher.version>
@@ -43,11 +44,15 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.core5</groupId>
+            <artifactId>httpcore5</artifactId>
+            <version>${httpcore5.version}</version>
         </dependency>
 
         <dependency>
