--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <junit-jupiter.version>5.10.3</junit-jupiter.version>
         <junit-platform-launcher.version>1.10.3</junit-platform-launcher.version>
         <mockito-core.version>5.12.0</mockito-core.version>
+
+        <maven-surefire-plugin.version>3.4.0</maven-surefire-plugin.version>
     </properties>
 
     <dependencies>
@@ -83,6 +85,10 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
